fixing an alignment problem on mobile

--- a/css/application.css
+++ b/css/application.css
@@ -1185,7 +1185,6 @@ address{
 		width: 84%;
 		position: relative;
 		left: 0px;
-		margin-right: 30px;
 	}
 
 	/* Change up some type stuff */
